Omit consumer group filter in older ListGroups request